--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,60 @@
+body {
+  background: #d5e2ec;
+}
+
+td a {
+  background: #97cdff;
+  border-radius: 5px;
+  display: block;
+  width: 38px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 15px;
+}
+td a:link, a:visited, a:hover, a:active {
+  color: #000000;
+}
+
+.calender_container {
+  margin-top: 100px;
+}
+
+.calender_container table {
+  margin-right: auto;
+margin-left : auto;
+}
+
 .calendar_top a{
-  font-size: 30px;
   color: #000000;
   text-decoration: none;
+  text-align: center;
+}
+
+.calendar_top {
+  width: 400px;
+  margin-right: auto;
+margin-left : auto;
+margin-bottom: 20px;
+}
+
+.button {
+  background: #80c3f0;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
 
 
+.this_year {
+  font-size: 30px;
+  margin: 0 100px;
+}
+
 .calendar {
   border-collapse: collapse;
+}
+
+tbody {
+  background:#ffffff;
 }
 
 td,th {
@@ -16,6 +64,7 @@ td,th {
 
 th {
   height: 30px;
+  text-align: center;
 }
 
 td {
@@ -47,9 +96,117 @@ th:nth-of-type(7),td:nth-of-type(7) {
   color: #dedede !important;
 }
 .today {
-  background: #fdd7ed;
+  background: #fffccd;
 }
 
 .holiday {
   color: #ff3838;
+}
+
+
+/* ＝＝＝＝reserve.php＝＝＝＝ */
+
+.box {
+  width: 600px;
+  background: #ffffff;
+  margin: 100px auto;
+  padding: 50px;
+}
+
+.reserve_title {
+  font-size: 26px;
+}
+
+form input {
+  width: 500px;
+  height: 40px;
+}
+
+form textarea {
+  width: 500px;
+  height: 100px;
+  border: #5c5c5c solid 1px;
+  background: #ffffff;
+}
+
+select {
+  height: 40px;
+}
+
+.confirm_item {
+  margin-top: 30px;
+  display: flex;
+}
+
+.require {
+  background: #e75e5e;
+  border-radius: 5px;
+  margin-left: 10px;
+  padding: 0 10px;
+  color: #ffffff;
+  font-size: 0.7em;
+  height: 22px;
+}
+
+.error_msg {
+  font-size: 12px;
+  color: #e75e5e;
+}
+
+
+
+/* ＝＝＝＝reserve_confirm.php＝＝＝＝ */
+
+
+.message_confirm,.message_info {
+  margin-bottom: 30px;
+}
+
+.message_confirm {
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.message_info {
+  display: flex;
+  margin-left: 100px;
+}
+
+.reserve_item {
+  margin-right: 10px;
+}
+
+form .confirm_button {
+  display: block;
+  margin: 0 auto;
+}
+
+.last_confirm {
+  text-align: center;
+  margin: 100px 0 20px 0;
+}
+
+.confirm_area {
+  display: flex;
+  width: 250px;
+  margin: 0 auto;
+}
+
+
+/* ＝＝＝reserve_complete.php＝＝＝ */
+
+.complete_msg {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.btn {
+  background:#dddddd;
+  border-radius: 5px;
+  padding: 6px;
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 0.8em;
 }
